--- a/style.css
+++ b/style.css
@@ -10,4 +10,42 @@
 body {
     display: flex;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Header styles */
+
+.header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 128px;
+    background-color: #1F2937;
+}
+
+.header-logo {
+    font-size: 24px;
+    font-weight: 600;
+    color: #F9FAF8
+}
+
+.header-links {
+    display: flex;
+    gap: 24px;
+}
+
+ul {
+    margin: 0px;
+    padding: 0px;
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+a:hover {
+    color: #a3a5aa;
+}
+
