Add styles to title section

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     justify-content: space-between;
     padding: 20px 128px;
     background-color: #1F2937;
+    flex-wrap: wrap;
 }
 
 .header-logo {
@@ -31,6 +32,7 @@ body {
 .header-links {
     display: flex;
     gap: 24px;
+    flex-wrap: wrap;
 }
 
 ul {
@@ -49,3 +51,39 @@ a:hover {
     color: #a3a5aa;
 }
 
+/* Title styles */
+
+.title-wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 128px;
+    background-color: #1F2937;
+    gap: 32px;
+}
+
+.title-writing h1 {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+    padding-bottom: 12px;
+}
+
+.title-writing p {
+    color: #E5E7EB;
+    font-size: 18px;
+    padding-bottom: 12px;
+}
+
+.title-writing button {
+    color: #F9FAF8;
+    background-color: #3882F6;
+    border: 0;
+    padding: 8px 32px;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+.title-wrapper img {
+    max-height: 300px;
+    max-width: 500px;
+}
