--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
+    min-width: 1000px;
 }
 
 /* Header styles */
@@ -22,7 +23,6 @@ body {
     background-color: #1F2937;
     height: 72px;
     align-items: center;
-    min-width: 1000px;
 }
 
 .header-logo {
@@ -42,13 +42,13 @@ ul {
     list-style-type: none;
 }
 
-a {
+.header-links a {
     text-decoration: none;
     font-size: 18px;
     color: #E5E7EB;
 }
 
-a:hover {
+.header-links a:hover {
     color: #a3a5aa;
 }
 
@@ -61,7 +61,6 @@ a:hover {
     background-color: #1F2937;
     height: 320px;
     gap: 16px;
-    min-width: 1000px;
 }
 
 .title-wrapper > * {
@@ -94,4 +93,34 @@ a:hover {
     max-height: 100%;
     width: 100%;
     object-fit: contain;
+}
+
+/* Info styles */
+
+.info-wrapper {
+    height: 320px;
+    text-align: center;
+    padding: 32px;
+}
+
+.info-wrapper > h2 {
+    margin-bottom: 32px;
+}
+
+.info-figures {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+}
+
+.info-figures > * {
+    max-width: 120px;
+}
+
+.info-figures > * > img {
+    max-height: 120px;
+    max-width: 120px;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
 }
