--- a/style.css
+++ b/style.css
@@ -163,3 +163,12 @@ ul {
     font-size: 20px;
     font-weight: 700;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    height: 72px;
+}
