--- a/style.css
+++ b/style.css
@@ -169,6 +169,42 @@ ul {
 
 .call-to-action-wrapper {
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 12%;
+    min-height: 240px;
+}
+
+.call-to-action {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    gap: 6%;
+    background-color: #3882F6;
+    padding: 40px 10%;
+    border-radius: 16px;
+    color:#F9FAF8;
+    max-width: 1000px;
+}
+
+.call-to-action > .cta-lhs > .cta-title {
+    font-size: 22px;
+    margin-bottom: 4px;
+}
+
+.call-to-action > .cta-lhs > p {
+    color:#E5E7EB
+}
+
+.call-to-action button {
+    color: #F9FAF8;
+    background-color: #3882F6;
+    border: 2px solid #F9FAF8;
+    padding: 8px 32px;
+    border-radius: 8px;
+    font-size: 16px;
 }
 
 .footer {
