--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ ul {
     justify-content: center;
     text-align: center;
     gap: 40px;
-    padding: 0px 15%;
+    /* padding: 0px 15%; */
 }
 
 .info-wrapper > h2 {
@@ -117,12 +117,14 @@ ul {
 
 .info-figures {
     display: flex;
+    gap: 8%;
     /* gap: 48px; */
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    justify-content: center;
 }
 
 .info-figures > * {
-    max-width: 150px;
+    width: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -130,10 +132,10 @@ ul {
 }
 
 .info-figures > * > img {
-    min-height: 150px;
-    max-width: 150px;
-    width: 100%;
-    height: 100%;
+    height: 150px;
+    width: 150px;
+    /* width: 100%;
+    height: 100%; */
     border-radius: 8px;
 }
 
@@ -172,7 +174,7 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 12%;
+    padding: 0px 16%;
     min-height: 240px;
 }
 
@@ -181,12 +183,12 @@ ul {
     flex-grow: 1;
     justify-content: center;
     align-items: center;
-    gap: 6%;
+    gap: 8%;
     background-color: #3882F6;
-    padding: 40px 10%;
+    padding: 40px 40px;
     border-radius: 16px;
     color:#F9FAF8;
-    max-width: 1000px;
+    max-width: 90%;
 }
 
 .call-to-action > .cta-lhs > .cta-title {
@@ -205,6 +207,7 @@ ul {
     padding: 8px 32px;
     border-radius: 8px;
     font-size: 16px;
+    flex-shrink: 0;
 }
 
 .footer {
