--- a/style.css
+++ b/style.css
@@ -147,40 +147,50 @@ ul {
 
 .quote-wrapper {
     display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    min-height: 320px;
+    /* padding: 0px 25%; */
+    background-color: #E5E7EB;
+    /* gap: 12px; */
+    align-items: center;
+}
+
+.quote {
+    width: 75%;
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 320px;
-    padding: 0px 25%;
-    background-color: #E5E7EB;
     gap: 12px;
 }
 
-.quote-wrapper > blockquote p {
+.quote > blockquote{
     font-size: 28px;
     font-style: italic;
     font-weight: lighter;
     color: #1F2937;
 }
 
-.quote-wrapper > p {
+.quote > p {
     align-self: flex-end;
-    margin-right: 32px;
     font-size: 20px;
     font-weight: 700;
 }
+
+/* Call to action styling */
 
 .call-to-action-wrapper {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0px 16%;
+    /* padding: 0px 16%; */
     min-height: 240px;
 }
 
 .call-to-action {
-    display: flex;
     flex-grow: 1;
+    display: flex;
     justify-content: center;
     align-items: center;
     gap: 8%;
@@ -188,7 +198,7 @@ ul {
     padding: 40px 40px;
     border-radius: 16px;
     color:#F9FAF8;
-    max-width: 90%;
+    max-width: 65%;
 }
 
 .call-to-action > .cta-lhs > .cta-title {
