--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 .header-wrapper {
     display: flex;
     justify-content: space-between;
-    padding: 20px 8%;
+    padding: 20px 10%;
     background-color: #1F2937;
     min-height: 72px;
     align-items: center;
@@ -66,9 +66,9 @@ ul {
 .title {
     display: flex;
     width: 80%;
-    min-height: 235px;
+    /* min-height: 235px; */
     gap: 7%;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .title-writing {
@@ -226,7 +226,7 @@ ul {
     padding: 40px 40px;
     border-radius: 16px;
     color:#F9FAF8;
-    max-width: 65%;
+    max-width: 70%;
 }
 
 .call-to-action > .cta-lhs > .cta-title {
