--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ ul {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    /* gap: 8%; */
+    gap: 8%;
     background-color: #3882F6;
     padding: 40px 40px;
     border-radius: 16px;
