--- a/style.css
+++ b/style.css
@@ -12,3 +12,39 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     min-height: 100vh;
 }
+
+.header-wrapper {
+    padding: 32px;
+    background-color: #1F2937;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    gap: 88px;
+    max-width: 1112px;
+    margin: 0px auto;
+}
+
+.header > .logo {
+    font-size: 24px;
+    font-weight: 600;
+    color: #F9FAF8
+}
+
+.header > ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+
+.header > ul a {
+    text-decoration: none;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.header > ul a:hover {
+    color: #a3a5aa;
+} 
