Style info section

--- a/style.css
+++ b/style.css
@@ -95,3 +95,28 @@ body {
 .title button:hover {
     background-color: #2c61b7;
 }
+
+.info {
+    text-align: center;
+    padding: 40px 32px 72px;
+}
+
+.info > h2 {
+    margin-bottom: 40px;
+}
+
+.info > .figures {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+}
+
+.figures > figure {
+    max-width: 232px;
+}
+
+figure > img {
+    width: 160px;
+    height: 160px;
+    margin-bottom: 12px;
+}
