--- a/style.css
+++ b/style.css
@@ -143,3 +143,48 @@ figure > img {
     max-width: 800px;
     margin: 0px auto;
 }
+
+.call-to-action-wrapper {
+    padding: 72px 48px;
+    flex: 1;
+    }
+    
+    .call-to-action {
+        display: flex;
+        padding: 40px 56px;
+        background-color: #3882F6;
+        border-radius: 8px;
+        color: #F9FAF8;
+        align-items: center;
+        gap: 48px;
+        justify-content: space-evenly;
+        max-width: 1024px;
+        margin: 0px auto;
+    }
+    
+    .call-to-action  .lhs-title {
+        font-size: 22px;
+        margin-bottom: 4px;
+    }
+    
+    .call-to-action .lhs > p {
+        color: #E5E7EB
+    }
+    
+    .call-to-action > button {
+        color: #F9FAF8;
+        background-color: #3882F6;
+        border: 2px solid #F9FAF8;
+        padding: 8px 32px;
+        border-radius: 8px;
+        font-size: 16px;
+        flex-shrink: 0;
+    }
+    
+    .call-to-action button:hover {
+        background-color: #2c61b7;
+    }
+    
+    button {
+        cursor: pointer;
+    }
