Style footer section

--- a/style.css
+++ b/style.css
@@ -188,3 +188,10 @@ figure > img {
     button {
         cursor: pointer;
     }
+
+    .footer {
+        background-color: #1F2937;
+        color: #F9FAF8;
+        padding: 32px;
+        text-align: center;
+    }
