--- a/style.css
+++ b/style.css
@@ -119,12 +119,17 @@ body {
     margin-bottom: 12px;
 }
 
-.quote {
+.quote-wrapper {
     padding: 88px;
     background-color: #E5E7EB;
 }
 
-.quote > blockquote{
+.quote {
+    max-width: 800px;
+    margin: 0px auto;
+}
+
+.quote > blockquote > p{
     font-size: 28px;
     font-style: italic;
     color: #1F2937;
@@ -135,11 +140,6 @@ body {
     font-size: 20px;
     font-weight: 700;
     text-align: right;
-}
-
-.quote > * {
-    max-width: 800px;
-    margin: 0px auto;
 }
 
 .call-to-action-wrapper {
